[package]
name = "nostr-smart-follow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
nostr_rust = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.5.10"